--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [
       {
           "src": "*.py",
-          "use": "@liudonghua123/now-flask"
+          "use": "Bob_and_Fill/now-flask"
       }
   ],
   "routes": [
